2000-03-22  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* numbers.h, ramap.c, struct.h, vectors.h:  Don't use SCM2PTR for
	non scheme values.  If raw data is stored in SCM variables, it has
	to be accessed using SCM_UNPACK until a better solution is found.

2000-03-22  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* tags.h (SCM_ECONSP, SCM_NECONSP): More corrections of
	pointer-arithmetic induced by the SCM_PACK/UNPACK change.

	* print.c (scm_iprin1): SCM_PACK/UNPACK corrections.

	* gc.c (scm_gc_sweep): SCM_PACK/UNPACK corrections.

	* eval.c (SCM_CEVAL, scm_unmemocar): SCM_PACK/UNPACK corrections.

	* dynwind.c (scm_swap_bindings): SCM_PACK/UNPACK corrections.

	* async.c, __scm.h: Removed lots of the old async click logic.  It
	is possible to reinsert it by defining GUILE_OLD_ASYNC_CLICK in
	__scm.h.  Let's try this out and dump the old code after the
	threads reorganization.
	(set-tick-rate, set-switch-rate): Conditionally removed.

2000-03-21  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* gc.c (scm_gc_mark): Bugfix 1: The recent SCM_PACK/UNPACK change
	made SCM values into pointers.  This turned an arithmetic
	computation of the address of the vcell into a pointer-arithmetic
	one, thereby screwing up marking of structs.
	Bugfix 2: Removed incompletely introduced loop variable `j' used
	when protecting the tail array of a struct.

2000-03-21  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* struct.h (SCM_STRUCT_DATA):  Don't cast SCM values to pointers.

2000-03-21  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* symbols.h, symbols.c (scm_strhash):  Declare the string
	parameter as constant, since it is not modified.

	* symbols.c (scm_intern_obarray_soft,
	scm_sysintern0_no_module_lookup):  Can now pass constant strings
	to scm_strhash without need for casting.

2000-03-21  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* vectors.h (SCM_VELTS, SCM_VELTS_AS_STACKITEMS):  Don't cast SCM
	values to pointers.  Use SCM2PTR instead.

2000-03-21  Dirk Herrmann  <D.Herrmann@tu-bs.de>
